--- a/front-end/src/global.css
+++ b/front-end/src/global.css
@@ -13,7 +13,7 @@ body{
     -webkit-font-smoothing: antialiased;
 }
 
-input, button, textarea{
+input, button, textarea, select{
     font: 400 18px Roboto, sans-serif;
 }
 
@@ -24,10 +24,11 @@ button{
 form input {
     width: 100%;
     height: 60px;
-    columns: #333;
+    color: #333;
     border: 1px solid #dcdce6;
-    border-radius: 8px;
     padding: 0 24px;
+    transition: outline .0.2s;
+    border-radius: 3px;
 }
 
 form textarea {
@@ -36,9 +37,9 @@ form textarea {
     min-height: 140px;
     columns: #333;
     border: 1px solid #dcdce6;
-    border-radius: 8px;
     padding: 16px 24px;
     line-height: 24px;
+    border-radius: 3px;
 }
 
 .button{
@@ -47,7 +48,6 @@ form textarea {
     background: #e02041;
     color: #FFF;
     border: 0;
-    border-radius: 8px;
     font-weight: 700;
     margin-top: 16px;
     display: inline-block;
@@ -56,6 +56,7 @@ form textarea {
     font-size: 18px;
     line-height: 60px;
     transition: filter 0.2s;
+    border-radius: 3px;
 }
 
 .button:hover{
