--- a/front-end/src/pages/NewIncident/styles.css
+++ b/front-end/src/pages/NewIncident/styles.css
@@ -47,6 +47,25 @@
     margin-top: 18px;
 }
 
+.new-incident-container .content .label {
+    margin-top: 18px;
+    background: #FFF;
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    padding-top: 18px;
+    border: 1px solid #dcdce6;
+    border-radius: 3px;
+}
+
+.new-incident-container .content form label{
+    cursor: pointer;
+    color: #515155;
+}
+
+input[type='file'] {
+    display: none
+}
 .new-incident-container .content form .input-group input + input {
     margin-left: 8px;
 }
