--- a/front-end/src/pages/Profile/styles.css
+++ b/front-end/src/pages/Profile/styles.css
@@ -41,7 +41,7 @@
 
 .profile-container h1{
     margin-top: 80px;
-    margin-bottom: 24px;
+    margin-bottom: 54px;
 }
 
 .profile-container ul {
@@ -58,7 +58,19 @@
     position: relative;
 }
 
-.profile-container ul li button {
+.profile-container .alter {
+    background: transparent;
+    position: absolute;
+    right: 54px;
+    top: 24px;
+    border: 0
+}
+
+.profile-container .alter:hover {
+    opacity: 0.8;
+}
+
+.profile-container .delete {
     background: transparent;
     position: absolute;
     right: 24px;
@@ -66,7 +78,7 @@
     border: 0
 }
 
-.profile-container ul li button:hover {
+.profile-container .delete:hover {
     opacity: 0.8;
 }
 
@@ -74,6 +86,8 @@
     display: block;
     margin-bottom: 16px;
     color: #41414d;
+    margin-top: 70px;
+    font-size: 18px;
 }
 
 .profile-container ul li p + strong {
@@ -84,4 +98,23 @@
     color: #737380;
     line-height: 21px;
     font-size: 16px;
+}
+
+.profile-container ul li img{
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: -30px;
+    border-radius: 100%;
+    border: 4px solid #f0f0f5;
+    transition: 0.3s;
+}
+
+.profile-container ul li img:hover{
+    border-radius: 8px;
+    border: 4px solid #f0f0f5;
+}
+
+.profile-container .value{
+    color: #1b8237
 }
