--- a/front-end/src/pages/Profile/styles.css
+++ b/front-end/src/pages/Profile/styles.css
@@ -40,7 +40,7 @@
 }
 
 .profile-container h1{
-    margin-top: 80px;
+    margin-top: 50px;
     margin-bottom: 54px;
 }
 
@@ -53,9 +53,11 @@
 
 .profile-container ul li {
     background: #FFF;
+    margin-top: 15px;
     padding: 24px;
     border-radius: 8px;
     position: relative;
+    box-shadow: 1px 6px 17px -5px rgba(186,186,186,1);
 }
 
 .profile-container .alter {
@@ -78,10 +80,10 @@
     border: 0
 }
 
-.profile-container .delete:hover {
-    opacity: 0.8;
+.profile-container .delete:hover,
+.profile-container .delete:focus {
+  filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg) brightness(104%) contrast(97%);
 }
-
 .profile-container ul li strong{
     display: block;
     margin-bottom: 16px;
@@ -111,10 +113,5 @@
 }
 
 .profile-container ul li img:hover{
-    border-radius: 8px;
-    border: 4px solid #f0f0f5;
-}
-
-.profile-container .value{
-    color: #1b8237
+    opacity: 0.8;
 }
